--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,7 @@
   --dsg-header-active-text-color: black;
   --dsg-cell-background-color: white;
   --dsg-cell-disabled-background-color: rgb(250, 250, 250);
+  --dsg-cell-passive-background-color: rgb(250, 250, 250);
   --dsg-transition-duration: 0.1s;
   --dsg-expand-rows-indicator-width: 10px;
   --dsg-scroll-shadow-width: 7px;
@@ -101,6 +102,10 @@
 
 .dsg-cell-disabled {
   background-color: var(--dsg-cell-disabled-background-color);
+}
+
+.dsg-cell-passive {
+  background-color: var(--dsg-cell-passive-background-color);
 }
 
 .dsg-cell-header,
