Make title & component FCs

--- a/src/style.css
+++ b/src/style.css
@@ -486,6 +486,7 @@
 
 .dsg-selection-rect-sticky-container {
   position: absolute;
+  pointer-events: none;
 }
 
 .dsg-selection-rect-sticky-container-left {
